# scatter-py

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: ping_bot.py
scatter/: __init__.py  client.py  context.py  errors.py  events.py  gateway.py  http.py  models.py  types.py
